<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.stegnography.EncodeActivity"
    android:background="@drawable/img_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/type_of_data_for_encoding"
        android:id="@+id/textView"
        android:layout_marginTop="54dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_encode_button"
        android:id="@+id/textEncodeButton"
        android:width="150dp"
        android:height="75dp"
        android:textSize="15sp"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voice_encode_button"
        android:id="@+id/voiceEncodeButton"
        android:height="75dp"
        android:width="150dp"
        android:textSize="15sp"
        android:layout_alignTop="@+id/textEncodeButton"
        android:layout_alignParentStart="true" />


</RelativeLayout>
