<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.stegnography.MainActivity"
    android:background="@drawable/img_background"
    >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encode_button"
        android:id="@+id/encodeButton"
        android:height="150dp"
        android:width="300dp"
        android:layout_marginTop="45dp"
        android:textSize="18sp"
        android:layout_below="@+id/welcomeText"
        android:layout_centerHorizontal="true"
        android:background="#f5f5f0"
        android:allowUndo="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decode_button"
        android:id="@+id/decodeButton"
        android:width="300dp"
        android:height="150dp"
        android:textSize="18sp"
        android:layout_below="@+id/encodeButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#f5f5f0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_to_stegnography"
        android:id="@+id/welcomeText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp" />

</RelativeLayout>
